# KaputEngine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Motor/: CMakeLists.txt
Motor/Dependencies/: CMakeLists.txt
Motor/Dependencies/Addon/: lua51.lib
Motor/Dependencies/Debug/: Bullet3Common_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib
Motor/Dependencies/Header/Bullet/Bullet3Dynamics/: b3CpuRigidBodyPipeline.h
Motor/Dependencies/Header/Irrklang/: ik_ISoundStopEventReceiver.h
Motor/Dependencies/Header/LibMath/: Angle.h  Arithmetic.h  LinearMathArray.h  MathArray.h  Matrix.h  Quaternion.h  Rotor.h  Transform.h  Trigonometry.h  Vector.h
Motor/Dependencies/Header/LibMath/Angle/: Angle.h  Degree.h  Radian.h
Motor/Dependencies/Header/LibMath/Geometry/: Box.h  Extents.h  Intersection.h  Line.h  NSphere.h  OrientedRectangle.h  Ray.h  Rect.h  Rectangle.h  Shape.h  Shape2D.h  Shape3D.h
Motor/Dependencies/Header/LibMath/Geometry/Internal/: ShapeBase.h
Motor/Dependencies/Header/LibMath/MathArray/: Arithmetics.h  Concepts.h  MathArray.h  MathArray.natvis  Utilities.h
Motor/Dependencies/Header/LibMath/MathArray/Internal/: DirectionAliases.h  Macros.h  MathArrayBase.h  PointAliases.h  (+1 more)
Motor/Dependencies/Header/LibMath/Point/: Barycentric3.h  Cartesian.h
Motor/Dependencies/Header/LibMath/Vector/: Vector.h  Vector1.h  Vector2.h  Vector3.h  Vector4.h
Motor/Dependencies/Release/: Bullet3Common.lib  BulletInverseDynamics.lib  LinearMath.lib
Motor/Dependencies/Source/LibMath/: Arithmetic.cpp  Trigonometry.cpp
Motor/Dependencies/Source/LibMath/Angle/: Angle.cpp  Degree.cpp  Radian.cpp
Motor/Header/: Application.h  IPhysicsUpdatable.h  IRenderable.h  IUpdatable.h  IWorldRenderable.h  IWorldUpatable.h  Id.h  InputManager.h  Registry.h  Registry.hpp  RegistryDefs.h
Motor/Header/Audio/: Engine.h  LiveSound.h  Sound.h
Motor/Header/Component/: Component.h  Component.hpp  Component.natvis  PhysicComponent.h  RenderComponent.h  ScriptComponent.h  ScriptComponent.hpp
Motor/Header/Component/Audio/: AudioComponent.h  AudioListenerComponent.h
Motor/Header/Component/Lighting/: DirectionalLightComponent.h  LightComponent.h  LightComponent.hpp  PointLightComponent.h
Motor/Header/GameObject/: Camera.h  GameObject.h  GameObject.hpp  GameObject.natvis  ObjectBase.h  ObjectBase.hpp  ObjectBase.natvis  Script.h
Motor/Header/Inspector/: Property.h  Property.hpp
Motor/Header/Physics/: PhysicHandler.h  PrivateBulletWrapper.h
Motor/Header/Queue/: Action.h  Action.hpp  Concurrent.h  Concurrent.hpp  Context.h
Motor/Header/Rendering/: Color.h  Color.natvis  GlTypes.h  Material.h  Material.hpp  Mesh.h  Primitive.h  Sampler.h  Sampler.hpp  Shader.h  ShaderProgram.h  ShaderProgram.hpp  TextureSample.h  Vertex.h  VertexAttribute.h
Motor/Header/Rendering/Buffer/: Buffer.h  ElementBuffer.h  FrameBuffer.h  RenderBuffer.h  SharedBuffer.h  SharedBuffer.hpp  TextureBuffer.h  VertexAttributeBuffer.h  VertexAttributeBuffer.hpp  VertexBuffer.h
Motor/Header/Rendering/Lighting/: DirectionalLightBuffer.h  LightBuffer.h  LightBuffer.hpp  LightData.h  PointLightBuffer.h
Motor/Header/Resource/: Manager.h  Manager.hpp  Material.h  Material.hpp  Mesh.h  Resource.h  Script.h  Shader.h  ShaderProgram.h  Sound.h  Texture.h
Motor/Header/Scene/: Root.h  Root.natvis  Scene.h
Motor/Header/Scene/Transform/: MatrixSource.h  Source.h  Source.natvis  Transform.h  Transform.natvis
Motor/Header/Text/: ShaderPreprocessor.h  String.h  String.hpp
Motor/Header/Text/Xml/: Context.h  Context.hpp  Node.h  Node.hpp  Parser.h  Parser.hpp  Serializer.h  Serializer.hpp
Motor/Header/Utils/: Assign.h  Bind.h  Function.h  Input.h  PartialBuffer.h  PartialBuffer.hpp  PartialBuffer.natvis  Pointer.h  Pointer.hpp  Policy.h  RemoveVector.h  RemoveVector.hpp  RemoveVector.natvis  rawalloc.h  rawalloc.hpp  rawalloc.natvis
Motor/Header/Window/: PrimaryWindow.h  UIObject.h  UIObject.hpp  VirtualWindow.h  VirtualWindow.hpp  WindowConfig.h
Motor/Source/: Application.cpp  Id.cpp  InputManager.cpp  Registry.cpp
Motor/Source/Audio/: Engine.cpp  LiveSound.cpp  Sound.cpp
Motor/Source/Component/: Component.cpp  PhysicComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp
Motor/Source/Component/Audio/: AudioComponent.cpp  AudioListenerComponent.cpp
Motor/Source/Component/Lighting/: DirectionalLightComponent.cpp  LightComponent.cpp  PointLightComponent.cpp
Motor/Source/GameObject/: Camera.cpp  GameObject.cpp  ObjectBase.cpp  Script.cpp
Motor/Source/Inspector/: Property.cpp
Motor/Source/Physics/: PhysicHandler.cpp
Motor/Source/Queue/: Context.cpp
Motor/Source/Rendering/: Color.cpp  Material.cpp  Mesh.cpp  Primitive.cpp  Shader.cpp  ShaderProgram.cpp
Motor/Source/Rendering/Buffer/: Buffer.cpp  ElementBuffer.cpp  FrameBuffer.cpp  RenderBuffer.cpp  SharedBuffer.cpp  TextureBuffer.cpp  VertexAttributeBuffer.cpp  VertexBuffer.cpp
Motor/Source/Rendering/Lighting/: DirectionalLightBuffer.cpp  LightBuffer.cpp  PointLightBuffer.cpp
Motor/Source/Resource/: Manager.cpp  Material.cpp  Mesh.cpp  Resource.cpp  Script.cpp  Shader.cpp  ShaderProgram.cpp  Sound.cpp  Texture.cpp
Motor/Source/Scene/: Root.cpp  Scene.cpp
Motor/Source/Scene/Transform/: MatrixSource.cpp  Source.cpp  Transform.cpp
Motor/Source/Text/: ShaderPreprocessor.cpp  String.cpp
Motor/Source/Text/Xml/: Context.cpp  Node.cpp  Parser.cpp  Serializer.cpp
Motor/Source/Window/: PrimaryWindow.cpp  UIObject.cpp  VirtualWindow.cpp
(+149 files in other folders)
